@@ -1,3 +1,8 @@
+2005-01-05  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* elf64-sparc.c (sparc64_elf_relocate_section): Ignore overflows
+	from STABS debugging sections again.
+
 2005-01-05  Fred Fish  <fnf@specifixinc.com>
 
 	* dwarf2.c (struct dwarf2_debug): Add info_ptr_unit member.
